--- a/.zcompdump-Surya’s MacBook Pro-5.9
+++ b/.zcompdump-Surya’s MacBook Pro-5.9
@@ -2060,4 +2060,4 @@ typeset -gUa _comp_assocs
 _comp_assocs=( '' )
 
 #omz revision: fe4b5659863c388786986d70fa6d1bb66b00afb6
-#omz fpath: /Users/suryajillellamudi/.oh-my-zsh/functions /Users/suryajillellamudi/.oh-my-zsh/completions /Users/suryajillellamudi/.oh-my-zsh/cache/completions /Users/suryajillellamudi/.oh-my-zsh/plugins/web-search /Users/suryajillellamudi/.oh-my-zsh/custom/plugins/zsh-syntax-highlighting /Users/suryajillellamudi/.oh-my-zsh/custom/plugins/zsh-autosuggestions /Users/suryajillellamudi/.oh-my-zsh/plugins/git /Users/suryajillellamudi/.oh-my-zsh/functions /Users/suryajillellamudi/.oh-my-zsh/completions /Users/suryajillellamudi/.oh-my-zsh/cache/completions /Users/suryajillellamudi/.oh-my-zsh/functions /Users/suryajillellamudi/.oh-my-zsh/completions /Users/suryajillellamudi/.oh-my-zsh/cache/completions /Users/suryajillellamudi/.oh-my-zsh/plugins/web-search /Users/suryajillellamudi/.oh-my-zsh/custom/plugins/zsh-syntax-highlighting /Users/suryajillellamudi/.oh-my-zsh/custom/plugins/zsh-autosuggestions /Users/suryajillellamudi/.oh-my-zsh/plugins/git /Users/suryajillellamudi/.oh-my-zsh/functions /Users/suryajillellamudi/.oh-my-zsh/completions /Users/suryajillellamudi/.oh-my-zsh/cache/completions /usr/local/share/zsh/site-functions /usr/share/zsh/site-functions /usr/share/zsh/5.9/functions
+#omz fpath: /Users/suryajillellamudi/.oh-my-zsh/functions /Users/suryajillellamudi/.oh-my-zsh/completions /Users/suryajillellamudi/.oh-my-zsh/cache/completions /Users/suryajillellamudi/.oh-my-zsh/plugins/web-search /Users/suryajillellamudi/.oh-my-zsh/custom/plugins/zsh-syntax-highlighting /Users/suryajillellamudi/.oh-my-zsh/custom/plugins/zsh-autosuggestions /Users/suryajillellamudi/.oh-my-zsh/plugins/git /Users/suryajillellamudi/.oh-my-zsh/functions /Users/suryajillellamudi/.oh-my-zsh/completions /Users/suryajillellamudi/.oh-my-zsh/cache/completions /usr/local/share/zsh/site-functions /usr/share/zsh/site-functions /usr/share/zsh/5.9/functions
